--- a/skins/mcplayer-bottombar.css
+++ b/skins/mcplayer-bottombar.css
@@ -19,7 +19,7 @@
 }
 #mcpplayersonginfo{display: none;}
 #mcpprogressdiv{clear: none; float: left; margin-left: 1em; position: relative; left: 0;}
-#mcpprogresscanvas{height: 1.5em; width: 400px;}
+#mcpprogresscanvas{height: 1.9em; width: 400px;}
 
 #mcpvolumediv{clear: none; float: left; margin-left: 1em; }
 #mcpvolumecanvas{height: 1.5em;}
